--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
       flex: 1; /* equal height for all maps */
       width: 100%;
     }
+    .map-title {
+        background: rgba(255, 255, 255, 0.92);
+        padding: 8px 12px;
+        border-radius: 5px;
+        font-size: 12px;
+        box-shadow: 0 0 5px rgba(0,0,0,0.3);
+      }
+
+    .map-title h4 {
+        margin: 0;
+        font-weight: bold;
+        color: #333;
+    }
 
     .sidebar {
       width: 20%;
